# peekrs

./: Cargo.toml  README.md  flake.nix
src/: args.rs  main.rs  raw.rs  shell.rs  tree.rs  watcher.rs  websocket.rs
static/: shell.html
