[package]
name = "peekrs"
version = "0.1.0"
edition = "2024"
description = "A file server with live reload"
license = "MIT"
repository = "https://github.com/twiddler/peekrs"
keywords = ["live-reload", "hot-reload", "preview", "askama", "storybook"]
categories = ["development-tools", "web-programming"]

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
clap = { version = "4.6.0", features = ["derive"] }
futures-util = { version = "0.3.32", features = ["sink"] }
http = "1.4.0"
itertools = "0.14.0"
notify = { version = "8.2.0", features = ["macos_fsevent"] }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "sync"] }
tower-http = { version = "0.6", features = ["fs"] }
